--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
 			<version>2.3.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
+		</dependency>
+
 
 
 		<dependency>
