--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.7.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>Group5Project</groupId>
 	<artifactId>WebApp</artifactId>
@@ -17,17 +17,6 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
-<!--		</dependency>-->
-
-<!--		<dependency>-->
-<!--			<groupId>org.hibernate</groupId>-->
-<!--			<artifactId>hibernate-validator</artifactId>-->
-<!--			<version>6.0.13.Final</version>-->
-<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.xerial</groupId>
@@ -53,20 +42,10 @@
 			<version>${gson.version}</version>
 		</dependency>
 
-
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
-<!--		<dependency>-->
-<!--			<groupId>com.oracle.database.jdbc</groupId>-->
-<!--			<artifactId>ojdbc8</artifactId>-->
-<!--			<scope>runtime</scope>-->
-<!--		</dependency>-->
-
-
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
